--- a/configs/platform-v7a/barebox.config
+++ b/configs/platform-v7a/barebox.config
@@ -24,7 +24,7 @@ CONFIG_ARCH_MULTIARCH=y
 # CONFIG_ARCH_TEGRA is not set
 # CONFIG_ARCH_ZYNQ is not set
 # CONFIG_ARCH_BCM283X is not set
-# CONFIG_ARCH_IMX is not set
+CONFIG_ARCH_IMX=y
 # CONFIG_ARCH_K3 is not set
 # CONFIG_ARCH_SUNXI is not set
 # CONFIG_ARCH_LAYERSCAPE is not set
@@ -45,6 +45,121 @@ CONFIG_CPU_32v7=y
 # processor features
 #
 # CONFIG_BOOT_ENDIANNESS_SWITCH is not set
+CONFIG_ARCH_HAS_L2X0=y
+# CONFIG_CACHE_L2X0 is not set
+CONFIG_ARCH_IMX_IMXIMAGE=y
+CONFIG_RESET_IMX_SRC=y
+
+#
+# i.MX boards
+#
+CONFIG_ARCH_IMX6=y
+CONFIG_ARCH_IMX6SX=y
+
+#
+# i.MX1 boards
+#
+# CONFIG_MACH_SCB9328 is not set
+
+#
+# i.MX25 boards
+#
+# CONFIG_MACH_TX25 is not set
+
+#
+# i.MX27 boards
+#
+# CONFIG_MACH_PCA100 is not set
+# CONFIG_MACH_PCM038 is not set
+
+#
+# i.MX50 boards
+#
+# CONFIG_MACH_KINDLE_MX50 is not set
+
+#
+# i.MX51 boards
+#
+# CONFIG_MACH_CCMX51 is not set
+# CONFIG_MACH_EFIKA_MX_SMARTBOOK is not set
+# CONFIG_MACH_FREESCALE_MX51_PDK is not set
+
+#
+# i.MX53 boards
+#
+# CONFIG_MACH_CCMX53 is not set
+# CONFIG_MACH_FREESCALE_MX53_LOCO is not set
+# CONFIG_MACH_GUF_VINCELL is not set
+# CONFIG_MACH_TX53 is not set
+# CONFIG_MACH_TQMA53 is not set
+# CONFIG_MACH_FREESCALE_MX53_VMX53 is not set
+# CONFIG_MACH_ZII_RDU1 is not set
+
+#
+# i.MX6 boards
+#
+# CONFIG_MACH_ADVANTECH_ROM_742X is not set
+CONFIG_MACH_NITROGEN6=y
+# CONFIG_MACH_CM_FX6 is not set
+# CONFIG_MACH_REALQ7 is not set
+# CONFIG_MACH_DFI_FS700_M60 is not set
+# CONFIG_MACH_DIGI_CCIMX6ULSBCPRO is not set
+# CONFIG_MACH_ELTEC_HIPERCAM is not set
+# CONFIG_MACH_EMBEDSKY_E9 is not set
+# CONFIG_MACH_EMBEST_MARSBOARD is not set
+CONFIG_MACH_EMBEST_RIOTBOARD=y
+# CONFIG_MACH_TORADEX_COLIBRI_IMX6 is not set
+CONFIG_MACH_SABRELITE=y
+# CONFIG_MACH_SABRESD is not set
+# CONFIG_MACH_FREESCALE_IMX6SX_SABRESDB is not set
+# CONFIG_MACH_UDOO is not set
+CONFIG_MACH_UDOO_NEO=y
+# CONFIG_MACH_GUF_SANTARO is not set
+# CONFIG_MACH_GW_VENTANA is not set
+# CONFIG_MACH_GRINN_LITEBOARD is not set
+# CONFIG_MACH_TX6X is not set
+# CONFIG_MACH_KONTRON_SAMX6I is not set
+# CONFIG_MACH_NOVENA is not set
+# CONFIG_MACH_NXP_IMX6ULL_EVK is not set
+# CONFIG_MACH_PHYTEC_SOM_IMX6 is not set
+# CONFIG_MACH_PROTONIC_IMX6 is not set
+# CONFIG_MACH_SKOV_IMX6 is not set
+# CONFIG_MACH_SOLIDRUN_MICROSOM is not set
+# CONFIG_MACH_TECHNEXION_PICO_HOBBIT is not set
+# CONFIG_MACH_TECHNEXION_WANDBOARD is not set
+# CONFIG_MACH_TQMA6X is not set
+# CONFIG_MACH_TQMA6UL is not set
+# CONFIG_MACH_VARISCITE_MX6 is not set
+# CONFIG_MACH_WEBASTO_CCBV2 is not set
+# CONFIG_MACH_GK802 is not set
+# CONFIG_MACH_ZII_RDU2 is not set
+
+#
+# i.MX7 boards
+#
+# CONFIG_MACH_MEERKAT96 is not set
+# CONFIG_MACH_AC_SXB is not set
+# CONFIG_MACH_WARP7 is not set
+# CONFIG_MACH_FREESCALE_MX7_SABRESD is not set
+# CONFIG_MACH_PHYTEC_PHYCORE_IMX7 is not set
+# CONFIG_MACH_VARISCITE_SOM_MX7 is not set
+# CONFIG_MACH_ZII_IMX7D_DEV is not set
+# CONFIG_MACH_KAMSTRUP_MX7_CONCENTRATOR is not set
+
+#
+# VF610 boards
+#
+# CONFIG_MACH_VF610_TWR is not set
+# CONFIG_MACH_ZII_VF610_DEV is not set
+# end of i.MX boards
+
+#
+# i.MX specific settings
+#
+CONFIG_IMX_IIM=y
+CONFIG_IMX_IIM_FUSE_BLOW=y
+# CONFIG_HABV4 is not set
+# end of i.MX specific settings
 
 #
 # OMAP Features
@@ -136,6 +251,8 @@ CONFIG_LOGBUF=y
 CONFIG_STDDEV=y
 CONFIG_CDEV_ALIAS=y
 CONFIG_MENUTREE=y
+CONFIG_BAREBOX_UPDATE_IMX_NAND_FCB=y
+CONFIG_UBIFORMAT=y
 CONFIG_BOOT=y
 CONFIG_FASTBOOT_BASE=y
 
@@ -247,6 +364,7 @@ CONFIG_DEFAULT_ENVIRONMENT=y
 CONFIG_DEFAULT_COMPRESSION_NONE=y
 CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW=y
 CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW_MENU=y
+CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW_DFU=y
 # CONFIG_DEFAULT_ENVIRONMENT_GENERIC_NEW_IKCONFIG is not set
 CONFIG_DEFAULT_ENVIRONMENT_PATH="$(objtree)/.ptxdist-defaultenv"
 CONFIG_HAS_SCHED=y
@@ -287,6 +405,7 @@ CONFIG_FASTBOOT_CMD_OEM=y
 CONFIG_COMPILE_LOGLEVEL=7
 CONFIG_DEFAULT_LOGLEVEL=6
 # CONFIG_DEBUG_LL is not set
+CONFIG_DEBUG_IMX_UART_PORT=1
 CONFIG_DEBUG_OMAP_UART_PORT=1
 # CONFIG_DEBUG_INITCALLS is not set
 # CONFIG_DEBUG_PBL is not set
@@ -347,6 +466,7 @@ CONFIG_CMD_MMC_EXTCSD=y
 # CONFIG_CMD_POLLER is not set
 CONFIG_CMD_BTHREAD=y
 # CONFIG_CMD_SLICE is not set
+CONFIG_CMD_FCB=y
 # end of Information
 
 #
@@ -373,6 +493,8 @@ CONFIG_CMD_AUTOMOUNT=y
 CONFIG_CMD_MOUNT=y
 # CONFIG_CMD_FINDMNT is not set
 CONFIG_CMD_PARTED=y
+CONFIG_CMD_UBI=y
+CONFIG_CMD_UBIFORMAT=y
 CONFIG_CMD_UMOUNT=y
 # end of Partition
 
@@ -460,6 +582,8 @@ CONFIG_CMD_EDIT=y
 CONFIG_CMD_MENU=y
 CONFIG_CMD_MENU_MANAGEMENT=y
 CONFIG_CMD_MENUTREE=y
+CONFIG_CMD_SPLASH=y
+# CONFIG_CMD_FBTEST is not set
 CONFIG_CMD_READLINE=y
 CONFIG_CMD_TIMEOUT=y
 # end of Console and Framebuffer interaction
@@ -500,6 +624,7 @@ CONFIG_CMD_SPI=y
 CONFIG_CMD_LED_TRIGGER=y
 CONFIG_CMD_USB=y
 CONFIG_CMD_USBGADGET=y
+# CONFIG_CMD_DFU is not set
 CONFIG_CMD_WD=y
 CONFIG_CMD_WD_DEFAULT_TIMOUT=0
 # end of Hardware manipulation
@@ -568,13 +693,16 @@ CONFIG_ARM_AMBA=y
 # CONFIG_SERIAL_DEV_BUS is not set
 # CONFIG_DRIVER_SERIAL_ARM_DCC is not set
 # CONFIG_SERIAL_AMBA_PL011 is not set
+CONFIG_DRIVER_SERIAL_IMX=y
 CONFIG_DRIVER_SERIAL_STM32=y
 CONFIG_DRIVER_SERIAL_NS16550=y
 # CONFIG_DRIVER_SERIAL_NS16550_OMAP_TTYS is not set
 # CONFIG_DRIVER_SERIAL_CADENCE is not set
+# CONFIG_DRIVER_SERIAL_LPUART32 is not set
 # CONFIG_SERIAL_SIFIVE is not set
 # end of serial drivers
 
+CONFIG_ARCH_HAS_FEC_IMX=y
 CONFIG_PHYLIB=y
 
 #
@@ -588,6 +716,7 @@ CONFIG_DRIVER_NET_TI_DAVINCI_MDIO=y
 CONFIG_DRIVER_NET_DESIGNWARE_EQOS=y
 CONFIG_DRIVER_NET_DESIGNWARE_STM32=y
 # CONFIG_DRIVER_NET_ENC28J60 is not set
+CONFIG_DRIVER_NET_FEC_IMX=y
 # CONFIG_DRIVER_NET_FSL_FMAN is not set
 # CONFIG_DRIVER_NET_KS8851_MLL is not set
 # CONFIG_DRIVER_NET_MICREL is not set
@@ -639,6 +768,8 @@ CONFIG_SPI=y
 CONFIG_SPI_MEM=y
 # CONFIG_DRIVER_SPI_FSL_QUADSPI is not set
 CONFIG_DRIVER_SPI_GPIO=y
+CONFIG_DRIVER_SPI_IMX=y
+CONFIG_DRIVER_SPI_IMX_2_3=y
 # CONFIG_DRIVER_SPI_LITEX_SPIFLASH is not set
 CONFIG_DRIVER_SPI_OMAP3=y
 # CONFIG_STM32_QSPI is not set
@@ -652,6 +783,8 @@ CONFIG_I2C_ALGOBIT=y
 # I2C Hardware Bus support
 #
 CONFIG_I2C_GPIO=y
+CONFIG_I2C_IMX=y
+# CONFIG_I2C_IMX_LPI2C is not set
 # CONFIG_I2C_DESIGNWARE is not set
 # CONFIG_I2C_MV64XXX is not set
 CONFIG_I2C_OMAP=y
@@ -662,7 +795,7 @@ CONFIG_I2C_STM32=y
 CONFIG_MTD=y
 CONFIG_MTD_WRITE=y
 CONFIG_MTD_OOB_DEVICE=y
-# CONFIG_MTD_RAW_DEVICE is not set
+CONFIG_MTD_RAW_DEVICE=y
 # CONFIG_MTD_CONCAT is not set
 
 #
@@ -673,7 +806,8 @@ CONFIG_MTD_OOB_DEVICE=y
 #
 # Self contained MTD devices
 #
-# CONFIG_MTD_DATAFLASH is not set
+CONFIG_MTD_DATAFLASH=y
+# CONFIG_MTD_DATAFLASH_WRITE_VERIFY is not set
 CONFIG_MTD_M25P80=y
 # CONFIG_MTD_DOCG3 is not set
 # CONFIG_MTD_MTDRAM is not set
@@ -689,11 +823,14 @@ CONFIG_MTD_RAW_NAND=y
 CONFIG_NAND=y
 # CONFIG_MTD_NAND_ECC_SOFT is not set
 CONFIG_NAND_ECC_HW_SYNDROME=y
-# CONFIG_NAND_ALLOW_ERASE_BAD is not set
+CONFIG_NAND_ALLOW_ERASE_BAD=y
+CONFIG_NAND_NEED_EXEC_OP=y
 
 #
 # Raw/parallel NAND flash controllers
 #
+CONFIG_NAND_IMX=y
+CONFIG_NAND_MXS=y
 CONFIG_NAND_OMAP_GPMC=y
 # CONFIG_MTD_NAND_OMAP_ELM is not set
 # CONFIG_NAND_STM32 is not set
@@ -713,29 +850,43 @@ CONFIG_MTD_SPI_NOR=y
 # CONFIG_MTD_SPI_NOR_USE_4K_SECTORS is not set
 # CONFIG_SPI_CADENCE_QUADSPI is not set
 # CONFIG_SPI_SYNOPSYS_OCTALSPI_NOR is not set
-# CONFIG_MTD_UBI is not set
+CONFIG_MTD_UBI=y
+CONFIG_MTD_UBI_BEB_LIMIT=20
+CONFIG_MTD_UBI_FASTMAP=y
+
+#
+# UBI debugging options
+#
+# CONFIG_MTD_UBI_CHECK_IO is not set
+# CONFIG_MTD_UBI_GENERAL_EXTRA_CHECKS is not set
 CONFIG_DISK=y
+CONFIG_DISK_IDE_SFF=y
 CONFIG_DISK_WRITE=y
 
 #
 # drive types
 #
-# CONFIG_DISK_ATA is not set
-# CONFIG_DISK_AHCI is not set
+CONFIG_DISK_ATA=y
+CONFIG_DISK_AHCI=y
+CONFIG_DISK_AHCI_IMX=y
 
 #
 # interface types
 #
-# CONFIG_DISK_INTF_PLATFORM_IDE is not set
+CONFIG_DISK_INTF_PLATFORM_IDE=y
+CONFIG_DISK_PATA_IMX=y
 CONFIG_USB=y
 CONFIG_USB_HOST=y
+CONFIG_USB_IMX_CHIPIDEA=y
+CONFIG_USB_IMX_CHIPIDEA_USBMISC=y
+CONFIG_USB_IMX_PHY=y
 CONFIG_USB_DWC2=y
 CONFIG_USB_DWC2_HOST=y
 CONFIG_USB_DWC2_GADGET=y
 # CONFIG_USB_DWC3 is not set
 CONFIG_USB_EHCI=y
 # CONFIG_USB_XHCI is not set
-# CONFIG_USB_ULPI is not set
+CONFIG_USB_ULPI=y
 CONFIG_USB_OTGDEV=y
 CONFIG_USB_STORAGE=y
 
@@ -746,12 +897,14 @@ CONFIG_USB_STORAGE=y
 # CONFIG_USB_ONBOARD_HUB is not set
 # CONFIG_TYPEC_TUSB320 is not set
 CONFIG_USB_GADGET=y
+CONFIG_USB_GADGET_DUALSPEED=y
+CONFIG_USB_GADGET_DRIVER_ARC=y
 CONFIG_USB_GADGET_AUTOSTART=y
 
 #
 # USB Gadget drivers
 #
-# CONFIG_USB_GADGET_DFU is not set
+CONFIG_USB_GADGET_DFU=y
 CONFIG_USB_GADGET_SERIAL=y
 CONFIG_USB_GADGET_FASTBOOT=y
 CONFIG_USB_GADGET_MASS_STORAGE=y
@@ -760,8 +913,34 @@ CONFIG_USB_MUSB_DSPS=y
 CONFIG_USB_MUSB_AM335X=y
 CONFIG_USB_MUSB_HOST=y
 CONFIG_USB_MUSB_GADGET=y
-# CONFIG_VIDEO is not set
+CONFIG_VIDEO=y
+# CONFIG_FRAMEBUFFER_CONSOLE is not set
+# CONFIG_DRIVER_VIDEO_FB_SSD1307 is not set
+CONFIG_VIDEO_VPL=y
+# CONFIG_DRIVER_VIDEO_STM32_LTDC is not set
+# CONFIG_DRIVER_VIDEO_ROCKCHIP is not set
+CONFIG_DRIVER_VIDEO_IMX_IPUV3=y
+CONFIG_DRIVER_VIDEO_IMX_IPUV3_LVDS=y
+# CONFIG_DRIVER_VIDEO_IMX_IPUV3_HDMI is not set
+# CONFIG_DRIVER_VIDEO_IMX_IPUV3_PARALLEL is not set
+# CONFIG_DRIVER_VIDEO_BOCHS_ISA is not set
+# CONFIG_DRIVER_VIDEO_SIMPLEFB_CLIENT is not set
+CONFIG_DRIVER_VIDEO_SIMPLEFB=y
+# CONFIG_DRIVER_VIDEO_RAMFB is not set
+# CONFIG_DRIVER_VIDEO_EDID is not set
+# CONFIG_DRIVER_VIDEO_BACKLIGHT is not set
+
+#
+# Video encoder chips
+#
+# CONFIG_DRIVER_VIDEO_MTL017 is not set
+# CONFIG_DRIVER_VIDEO_SIMPLE_PANEL is not set
+# CONFIG_DRIVER_VIDEO_PANEL_ILITEK_ILI9341 is not set
+# CONFIG_DRIVER_VIDEO_PANEL_SITRONIX_ST7789V is not set
+# CONFIG_DRIVER_VIDEO_PANEL_MIPI_DBI is not set
+# CONFIG_DRIVER_VIDEO_DW_HDMI is not set
 # CONFIG_SOUND is not set
+CONFIG_MCI_SDHCI=y
 CONFIG_MCI=y
 
 #
@@ -783,6 +962,8 @@ CONFIG_MCI_MMC_BOOT_PARTITIONS=y
 # CONFIG_MCI_DW is not set
 # CONFIG_MCI_SUNXI_SMHC is not set
 # CONFIG_MCI_ROCKCHIP_DWCMSHC is not set
+CONFIG_MCI_IMX_ESDHC=y
+# CONFIG_MCI_IMX_ESDHC_PIO is not set
 CONFIG_MCI_OMAP_HSMMC=y
 # CONFIG_MCI_MMCI is not set
 # CONFIG_MCI_ARASAN is not set
@@ -802,8 +983,10 @@ CONFIG_COMMON_CLK_GPIO=y
 #
 # Clocksource
 #
+CONFIG_ARCH_HAS_IMX_GPT=y
 CONFIG_CLOCKSOURCE_DUMMY_RATE=1000
 CONFIG_CLOCKSOURCE_ARM_ARCHITECTED_TIMER=y
+CONFIG_CLOCKSOURCE_IMX_GPT=y
 # CONFIG_CLOCKSOURCE_DW_APB_TIMER is not set
 CONFIG_CLOCKSOURCE_TI_DM=y
 # CONFIG_CLKSRC_STM32 is not set
@@ -857,29 +1040,36 @@ CONFIG_LED_TRIGGERS=y
 #
 # EEPROM support
 #
-# CONFIG_EEPROM_AT25 is not set
+CONFIG_EEPROM_AT25=y
 CONFIG_EEPROM_AT24=y
 # end of EEPROM support
 
 #
 # Input device support
 #
+CONFIG_INPUT=y
 # CONFIG_INPUT_EVBUG is not set
-# CONFIG_KEYBOARD_GPIO is not set
+CONFIG_KEYBOARD_GPIO=y
+# CONFIG_KEYBOARD_IMX_KEYPAD is not set
 # CONFIG_KEYBOARD_QT1070 is not set
 # CONFIG_KEYBOARD_USB is not set
 # CONFIG_INPUT_SPECIALKEYS is not set
 # end of Input device support
 
+CONFIG_WATCHDOG_IMX_RESET_SOURCE=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_POLLER=y
 # CONFIG_WATCHDOG_DW is not set
+CONFIG_WATCHDOG_IMX=y
+# CONFIG_WATCHDOG_IMXULP is not set
 CONFIG_WATCHDOG_OMAP=y
 CONFIG_STM32_IWDG_WATCHDOG=y
 # CONFIG_STPMIC1_WATCHDOG is not set
 # CONFIG_GPIO_WATCHDOG is not set
 # CONFIG_CADENCE_WATCHDOG is not set
 CONFIG_PWM=y
+CONFIG_PWM_IMX=y
+# CONFIG_PWM_TPM is not set
 CONFIG_PWM_STM32=y
 CONFIG_HWRNG=y
 # CONFIG_HW_RANDOM_TIMERIOMEM is not set
@@ -891,6 +1081,7 @@ CONFIG_HW_RANDOM_OPTEE=y
 # DMA support
 #
 # CONFIG_DMADEVICES is not set
+CONFIG_MXS_APBH_DMA=y
 # end of DMA support
 
 CONFIG_GPIOLIB=y
@@ -904,6 +1095,7 @@ CONFIG_GPIO_PINCONF=y
 # CONFIG_GPIO_74164 is not set
 # CONFIG_GPIO_74XX_MMIO is not set
 CONFIG_GPIO_GENERIC_PLATFORM=y
+CONFIG_GPIO_IMX=y
 CONFIG_GPIO_OMAP=y
 # CONFIG_GPIO_PCA953X is not set
 # CONFIG_GPIO_PCF857X is not set
@@ -920,6 +1112,7 @@ CONFIG_GPIO_OMAP=y
 # Pin controllers
 #
 CONFIG_PINCTRL=y
+CONFIG_PINCTRL_IMX_IOMUX_V3=y
 CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_STM32=y
 # end of Pin controllers
@@ -927,6 +1120,8 @@ CONFIG_PINCTRL_STM32=y
 CONFIG_NVMEM=y
 # CONFIG_NVMEM_RMEM is not set
 # CONFIG_NVMEM_SNVS_LPGPR is not set
+CONFIG_IMX_OCOTP=y
+# CONFIG_IMX_OCOTP_WRITE is not set
 # CONFIG_EEPROM_93XX46 is not set
 CONFIG_STM32_BSEC=y
 CONFIG_STM32_BSEC_WRITE=y
@@ -937,11 +1132,13 @@ CONFIG_STM32_BSEC_OPTEE_TA=y
 #
 CONFIG_BUS_OMAP_GPMC=y
 CONFIG_TI_SYSC=y
+# CONFIG_IMX_WEIM is not set
 # end of Bus devices
 
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED=y
 # CONFIG_REGULATOR_FAN53555 is not set
+# CONFIG_REGULATOR_PFUZE is not set
 CONFIG_REGULATOR_STM32_PWR=y
 CONFIG_REGULATOR_STM32_VREFBUF=y
 CONFIG_REGULATOR_STPMIC1=y
@@ -952,6 +1149,7 @@ CONFIG_REGULATOR_ARM_SCMI=y
 # Remoteproc drivers
 #
 CONFIG_REMOTEPROC=y
+# CONFIG_IMX_REMOTEPROC is not set
 CONFIG_STM32_REMOTEPROC=y
 # end of Remoteproc drivers
 
@@ -960,6 +1158,16 @@ CONFIG_RESET_CONTROLLER=y
 CONFIG_RESET_SIMPLE=y
 # CONFIG_RESET_IMX7 is not set
 CONFIG_RESET_SCMI=y
+CONFIG_HW_HAS_PCI=y
+
+#
+# PCI bus options
+#
+# CONFIG_PCI is not set
+# CONFIG_PCI_IMX6 is not set
+# CONFIG_PCI_ECAM_GENERIC is not set
+# end of PCI bus options
+
 # CONFIG_RTC_CLASS is not set
 
 #
@@ -988,13 +1196,14 @@ CONFIG_ARM_SCMI_TRANSPORT_SMC=y
 # end of FPGA Configuration Support
 
 CONFIG_GENERIC_PHY=y
-# CONFIG_USB_NOP_XCEIV is not set
+CONFIG_USB_NOP_XCEIV=y
 # CONFIG_PHY_FSL_IMX8MQ_USB is not set
 CONFIG_PHY_STM32_USBPHYC=y
 
 #
 # Hardware crypto devices
 #
+# CONFIG_CRYPTO_DEV_FSL_CAAM is not set
 # end of Hardware crypto devices
 
 #
@@ -1074,6 +1283,10 @@ CONFIG_FS_FAT=y
 CONFIG_FS_FAT_WRITE=y
 CONFIG_FS_FAT_LFN=y
 # CONFIG_FS_JFFS2 is not set
+CONFIG_FS_UBIFS=y
+CONFIG_FS_UBIFS_COMPRESSION_LZO=y
+# CONFIG_FS_UBIFS_COMPRESSION_ZLIB is not set
+CONFIG_FS_UBIFS_COMPRESSION_ZSTD=y
 # CONFIG_FS_BPKFS is not set
 # CONFIG_FS_UIMAGEFS is not set
 # CONFIG_FS_PSTORE is not set
@@ -1105,10 +1318,11 @@ CONFIG_FS_FAT_LFN=y
 #
 CONFIG_PARAMETER=y
 CONFIG_UNCOMPRESS=y
+CONFIG_XXHASH=y
 CONFIG_ZLIB=y
 CONFIG_BZLIB=y
 # CONFIG_LZ4_DECOMPRESS is not set
-# CONFIG_ZSTD_DECOMPRESS is not set
+CONFIG_ZSTD_DECOMPRESS=y
 CONFIG_XZ_DECOMPRESS=y
 CONFIG_XZ_DEC_X86=y
 CONFIG_XZ_DEC_POWERPC=y
@@ -1120,9 +1334,14 @@ CONFIG_XZ_DEC_ARM64=y
 # CONFIG_BASE64 is not set
 CONFIG_PROCESS_ESCAPE_SEQUENCE=y
 CONFIG_LZO_DECOMPRESS=y
+CONFIG_BCH=y
+CONFIG_BITREV=y
 CONFIG_FNMATCH=y
 CONFIG_QSORT=y
+CONFIG_LIBSCAN=y
+CONFIG_LIBUBIGEN=y
 CONFIG_IMAGE_SPARSE=y
+CONFIG_STMP_DEVICE=y
 CONFIG_LIBFDT=y
 # CONFIG_RATP is not set
 # CONFIG_ALLOW_PRNG_FALLBACK is not set
@@ -1132,8 +1351,15 @@ CONFIG_CRC8=y
 #
 # Library gui routines
 #
+CONFIG_IMAGE_RENDERER=y
+# CONFIG_BMP is not set
+CONFIG_PNG=y
+# CONFIG_QOI is not set
+CONFIG_LODEPNG=y
+# CONFIG_PICOPNG is not set
 # end of Library gui routines
 
+# CONFIG_BAREBOX_LOGO is not set
 CONFIG_PRINTF_UUID=y
 CONFIG_NLS=y
 # CONFIG_BLOBGEN is not set
@@ -1217,6 +1443,7 @@ CONFIG_MISSING_FIRMWARE_ERROR=y
 # Host Tools
 #
 # CONFIG_COMPILE_HOST_TOOLS is not set
+# CONFIG_ARCH_IMX_USBLOADER is not set
 CONFIG_OMAP_IMAGE=y
 # end of Host Tools
 
