--- a/configs/platform-v7a/platforms/image-riotboard.in
+++ b/configs/platform-v7a/platforms/image-riotboard.in
@@ -4,7 +4,7 @@ config IMAGE_RIOTBOARD
 	tristate
 	select HOST_GENIMAGE
 	select IMAGE_ROOT_EXT
-	select BAREBOX_MX6
+	select BAREBOX
 	prompt "Generate images/riotboard.hdimg"
 	help
 	  SD card image for the RIoTboard
