--- a/configs/platform-v7a/platforms/image-sabrelite.in
+++ b/configs/platform-v7a/platforms/image-sabrelite.in
@@ -4,7 +4,7 @@ config IMAGE_SABRELITE
 	tristate
 	select HOST_GENIMAGE
 	select IMAGE_ROOT_EXT
-	select BAREBOX_MX6
+	select BAREBOX
 	prompt "Generate images/sabrelite.hdimg"
 	help
 	  SD card image for the Boundary Devices SABRE Lite board
