--- a/configs/platform-v7a/platforms/image-udoo-neo.in
+++ b/configs/platform-v7a/platforms/image-udoo-neo.in
@@ -3,7 +3,7 @@
 config IMAGE_UDOO_NEO
 	tristate
 	select HOST_GENIMAGE
-	select BAREBOX_MX6
+	select BAREBOX
 	select IMAGE_ROOT_EXT
 	prompt "Generate images/udoo-neo.hdimg"
 	help
